tests/paczka2/big_fuzzy/76337941.err
Error in line 9: A492 A492 3,5
Error in line 7: PSLIDZQT A929 12,7
Error in line 14: PXk A492 30,7
Error in line 18: PXk A150 23,8
Error in line 21: PXk A929 82,6
Error in line 34: DCeT3A S371 90,1
Error in line 28: 9OYj8tG A150 75,0
Error in line 33: PSLIDZQT S371 8,0
Error in line 39: PSLIDZQT A492 69,7
Error in line 36: 9OYj8tG A492 8,3
Error in line 32: oUUpVXE3 S371 34,2
Error in line 47: oUUpVXE3 A929 19,5
Error in line 49: oUUpVXE3 S371 90,7
Error in line 60: A492 S371 97,3
Error in line 86: oUUpVXE( A150 70,5
Error in line 78: OXUj6FSx0KJ A150 86,3
Error in line 53: PSLIDZQT A929 24,7
Error in line 91: A492 S371 9,9
Error in line 98: A492 S371 98,0
Error in line 87: 9OYj8tG A492 62,0
Error in line 101: 9OYj8tG S371 42,5
Error in line 107: PXk A150 94,1
Error in line 113: DCeT3A S371 40,4
Error in line 102: 9OYj8tG A492 90,7
Error in line 124: 9OYj8tG A92 15,7
Error in line 132: 9OYj8tG A492 17,0
Error in line 119: DCeT3A A929 42,1
Error in line 122: PSLIDZQT A492 54,9
Error in line 104: oUUpVXE3 A150 12,9
Error in line 137: oUUpVXE3 A492 61,0
Error in line 134: OXUj6FSx0KJ A929 49,5
Error in line 135: DCeT3A A492 56,7
Error in line 151: oUUpVXE3 S371 87,5
Error in line 169: oUUpVXE3 A929 75,9
Error in line 173: A492 AE50 29,2
Error in line 172: oUUpVXE3 A492 93,0
Error in line 160: A492 S371 59,1
Error in line 185: oUUpVXE3 S371 32,0
Error in line 186: oUUpVXE3 A929 98,9
Error in line 210: DCeT3A A492 0,0
Error in line 214: oUUpVXE3 A492 328,8
Error in line 215: oUUpVXE3 S371 50,2
Error in line 211: DCeT3A A929 82,8
Error in line 216: oUUpVXE3 A929 18,2
Error in line 217: DCeT3A S371 47,9
Error in line 221: DCeT3A A929 63,2
Error in line 222: A492 A929 39,7
Error in line 227: A492 A929 97,12
Error in line 226: A492 A150 45,9
Error in line 230: A492 A929 370,3
Error in line 234: DCeT3A A929 87,3
Error in line 237: PXk S371 38,8
Error in line 236: DCeT3A A492 55,4
Error in line 239: DCeT3A S371 26,3
Error in line 243: PSLIDZQT S371 -1,0
Error in line 238: PXk A929 96,8
